added blue box around sign in

--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
             height:35px;
             left:590px;
         }
+        .blue-bordered{
+            width:60px;
+            height:24px;
+            border: solid 1px;
+            border-color:#318add;
+            background-color: #318add;
+            border-radius: 3px;
+            color:black;
+            text-justify:center;
+            text-align:center;
+
+        }
     </style>
     <body>
     <header>
